# sctpsample

./: CMakeLists.txt  LICENSE  README.md  client.cpp  client.h  data.pb.cc  data.pb.h  data.proto  main.cpp  server.cpp  server.h
